--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.10",
+    "lenis": "^1.2.3",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "react": "^19.0.0",
